force-app/main/default/objects/Material_Pricing_Group__c/Material_Pricing_Group__c.object-meta.xml
<CustomObject>
    <label>Material Pricing Group</label>
    <nameField>
        <displayFormat>MPG-{0000}</displayFormat>
        <label>Material Pricing Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Material Pricing Group</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>