force-app/main/default/objects/Material_Pricing_Group__c/fields/Material_Pricing_Group_MPG__c.field-meta.xml
<CustomField>
    <fullName>Material_Pricing_Group_MPG__c</fullName>
    <label>Material Pricing Group MPG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GT</fullName>
            </value>
            <value>
                <fullName>GU</fullName>
            </value>
            <value>
                <fullName>HN</fullName>
            </value>
            <value>
                <fullName>1P</fullName>
            </value>
            <value>
                <fullName>2P</fullName>
            </value>
            <value>
                <fullName>3P</fullName>
            </value>
            <value>
                <fullName>4P</fullName>
            </value>
            <value>
                <fullName>1S</fullName>
            </value>
            <value>
                <fullName>2S</fullName>
            </value>
            <value>
                <fullName>TP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>