force-app/main/default/objects/Material_Pricing_Group__c/fields/Material_Pricing_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Material_Pricing_Group_Name__c</fullName>
    <label>Material Pricing Group Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Large Enterprise HW</fullName>
            </value>
            <value>
                <fullName>Large Enterprise SW</fullName>
            </value>
            <value>
                <fullName>Large Enterprise Apps</fullName>
            </value>
            <value>
                <fullName>MiVoice 5000 HW</fullName>
            </value>
            <value>
                <fullName>MiVoice 5000 SW</fullName>
            </value>
            <value>
                <fullName>MiVoice 5000 Apps</fullName>
            </value>
            <value>
                <fullName>Enterprise HW</fullName>
            </value>
            <value>
                <fullName>Enterprise SW</fullName>
            </value>
            <value>
                <fullName>Small/Med Business HW</fullName>
            </value>
            <value>
                <fullName>Small/Med Business SW</fullName>
            </value>
            <value>
                <fullName>Small/Med Bus Apps</fullName>
            </value>
            <value>
                <fullName>Small Business HW</fullName>
            </value>
            <value>
                <fullName>Small Business SW</fullName>
            </value>
            <value>
                <fullName>Very Small Business HW</fullName>
            </value>
            <value>
                <fullName>Very Small Business SW</fullName>
            </value>
            <value>
                <fullName>Desktop IP (M)</fullName>
            </value>
            <value>
                <fullName>Desktop SIP</fullName>
            </value>
            <value>
                <fullName>Desktop Analog (A)</fullName>
            </value>
            <value>
                <fullName>Desktop Digital IP (A)</fullName>
            </value>
            <value>
                <fullName>SIP DECT</fullName>
            </value>
            <value>
                <fullName>Legacy Aastra 500</fullName>
            </value>
            <value>
                <fullName>3rd Party Group/Spares 5</fullName>
            </value>
            <value>
                <fullName>3rd Party Group/Spares 1</fullName>
            </value>
            <value>
                <fullName>3rd Party Group/Spares 2</fullName>
            </value>
            <value>
                <fullName>3rd Party Group/Spares 3</fullName>
            </value>
            <value>
                <fullName>3rd Party Group/Spares 4</fullName>
            </value>
            <value>
                <fullName>3rd Party Group/Spares 6</fullName>
            </value>
            <value>
                <fullName>3rd Party Group</fullName>
            </value>
            <value>
                <fullName>3rd Party Group 7</fullName>
            </value>
            <value>
                <fullName>3rd Party Group 8</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>