force-app/main/default/objects/Material_Pricing_Group__c/fields/Pre_Approved_SPA_Type__c.field-meta.xml
<CustomField>
    <fullName>Pre_Approved_SPA_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pre Approved SPA Type</label>
    <referenceTo>Pre_Approved_SPA_Type__c</referenceTo>
    <relationshipLabel>Material Pricing Group</relationshipLabel>
    <relationshipName>Material_Pricing_Group</relationshipName>
    <type>Lookup</type>
</CustomField>